Fix black background in some html emails
Some html emails, particularly those with tables where they set
bgcolor="white", appear black with ugly cyan text, which isn't ideal.
This fixes the issue by setting the message body to have a white
background instead of inverting them all.

The downside is they don't fit the theme as much, but they're much
easier to read on a simple white background without worrying about
messing up any custom styles that an HTML email might include.

--- a/styles/email-frame.less
+++ b/styles/email-frame.less
@@ -1,9 +1,14 @@
 .ignore-in-parent-frame {
   body {
-    -webkit-filter: invert() hue-rotate(180deg);
     color: #111;
   }
-  img {
-    -webkit-filter: invert() hue-rotate(180deg);
+  #inbox-html-wrapper {
+      background-color: #fff;
+      border-radius: 4px;
+      overflow-y: hidden;
+  }
+  .nylas-plaintext {
+      margin: 0;
+      padding: 1em 0.7em;
   }
 }
